Trying alternative fix

--- a/src/powershell-win-core/Properties/launchSettings.json
+++ b/src/powershell-win-core/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "powershell-win-core": {
       "commandName": "Executable",
-      "executablePath": ".\\win7-x64\\publish\\pwsh.exe"
+      "executablePath": ".\\pwsh.exe"
     }
   }
 }
